fix: Add SSE transport to schema and prevent validation drift
Fixes #29, addresses #30

## Problem
JSON Schema was missing the 'sse' transport type that Go validation
already supported, causing IDE validation to reject valid Clewfiles
that used SSE-based MCP servers.

Additionally, validation rules exist in two places (Go code and JSON
Schema) with no safeguards to keep them synchronized.

## Changes

### Fixed SSE Transport Bug (#29)
- schema/clewfile.schema.json:
  - Added "sse" to transport enum
  - Updated description noting SSE is legacy
  - Added conditional validation for SSE transport
  - Added SSE example in schema examples
- schema/examples/advanced.yaml:
  - Added SSE MCP server example with legacy note

### Added Drift Prevention Safeguards (#30)
- schema/clewfile.schema.json:
  - Added $comment documenting sync requirement with validate.go
- internal/config/validate.go:
  - Added comprehensive package comment documenting sync workflow
  - Listed all synced validation rules with locations
- CLAUDE.md:
  - Added "Schema Maintenance" section with:
    - Table of files requiring synchronization
    - When to update both files
    - Complete update checklist
    - Current synced rules reference table

## Testing
- All Go tests pass (make test)
- Schema validates as valid JSON
- SSE transport now accepted in schema enum
- Existing test confirms SSE was already supported in Go (TestValidateMCPServer/valid_sse)

## Impact
- Users with SSE MCP servers now get correct IDE validation
- Developers have clear workflow to prevent future drift
- Documentation ensures schema stays synchronized with code

--- a/schema/examples/advanced.yaml
+++ b/schema/examples/advanced.yaml
@@ -60,3 +60,9 @@ mcp_servers:
   linear:
     transport: http
     url: https://mcp.linear.app/mcp
+
+  # sse transport (legacy - prefer http for new configurations)
+  legacy-events-server:
+    transport: sse
+    url: https://example.com/mcp/events
+    scope: user
