--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,11 @@ jobs:
           cache: true
           cache-dependency-path: go.sum
 
-      - name: Run tests
-        run: make test
+      - name: Run unit tests
+        run: make test-unit
+
+      - name: Run e2e tests
+        run: make test-e2e
 
       - name: Generate coverage report
         run: make test-coverage
