fix: Generate incremental changelogs for releases
Previously, all releases showed cumulative changelogs from the beginning
of the project. Now each release shows only changes since the previous tag.

- Use git describe to find previous tag
- Generate changelog using tag range (PREVIOUS_TAG..TAG_NAME)
- Fall back to full log for initial release (v0.1.0)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,17 @@ jobs:
           {
             echo "## Changelog"
             echo ""
-            git log --oneline -20 "$TAG_NAME"
+            # Get previous tag to generate incremental changelog
+            PREVIOUS_TAG=$(git describe --tags --abbrev=0 "$TAG_NAME^" 2>/dev/null || echo "")
+            if [ -n "$PREVIOUS_TAG" ]; then
+              echo "Changes since $PREVIOUS_TAG:"
+              echo ""
+              git log --oneline "$PREVIOUS_TAG".."$TAG_NAME"
+            else
+              echo "Initial release"
+              echo ""
+              git log --oneline "$TAG_NAME"
+            fi
             echo ""
             echo "## Installation"
             echo ""
