feat: Implement unified source model for plugin repositories
Replace marketplace-centric model with unified sources supporting
marketplaces, standalone plugin repos, and local plugins.

Breaking changes:
- Replace 'marketplaces' field with 'sources' field
- Sources require 'kind' field (marketplace/plugin/local)
- Source config moved to nested 'source' object
- Plugin.Source changed from string to *SourceConfig

New features:
- Source 'alias' field for collision handling
- Support for plugin-kind sources (e.g., devops-toolkit)
- Support for local-kind sources (info only)
- Inline source syntax for one-off plugins
- Optional @source reference when names match

Implementation:
- Add SourceKind, SourceType, SourceConfig, Source types
- Update parser to handle sources and inline plugin sources
- Add validateSources() and validatePluginReferences()
- Update state readers to convert old marketplace format
- Update sync, diff, backup, git checker for sources
- Update all commands and output formatters
- Update all unit tests (147+ passing)
- Update templates to use sources format
- Bump version to 0.5.0

Closes #59

--- a/internal/templates/minimal.yaml
+++ b/internal/templates/minimal.yaml
@@ -1,9 +1,11 @@
 version: 1
 
-marketplaces:
-  claude-plugins-official:
-    source: github
-    repo: anthropics/claude-plugins
+sources:
+  - name: claude-plugins-official
+    kind: marketplace
+    source:
+      type: github
+      url: anthropics/claude-plugins
 
 plugins:
   - context7@claude-plugins-official
