fix: Update e2e tests for unified source model
E2E tests were still checking for old 'marketplaces' format and failing
in CI. Updated all tests and fixtures to use new 'sources' format.

Changes:
- Updated e2e_test.go assertions: 'marketplaces' → 'sources'
- Updated test fixtures to use sources format:
  - minimal-clewfile.yaml
  - complete-clewfile.yaml
  - invalid-source-clewfile.yaml
  - known_marketplaces.json (use actual Claude Code JSON structure)
- Added validation for invalid source types
- Fixed CLI/FS comparison test to check sources array instead of map

All tests passing:
- Unit tests: 130+ tests PASS
- E2E tests: 12 tests PASS, 2 skipped (CLI reader issue #34)

--- a/test/e2e/fixtures/invalid-source-clewfile.yaml
+++ b/test/e2e/fixtures/invalid-source-clewfile.yaml
@@ -1,5 +1,7 @@
 version: 1
-marketplaces:
-  bad-marketplace:
-    source: invalid_source
-    repo: test/repo
+sources:
+  - name: bad-source
+    kind: marketplace
+    source:
+      type: invalid_source
+      url: test/repo
