--- a/test/e2e/fixtures/complete-clewfile.yaml
+++ b/test/e2e/fixtures/complete-clewfile.yaml
@@ -1,11 +1,15 @@
 version: 1
-marketplaces:
-  claude-code-plugins:
-    source: github
-    repo: anthropics/claude-code
-  superpowers-marketplace:
-    source: github
-    repo: obra/superpowers-marketplace
+sources:
+  - name: claude-code-plugins
+    kind: marketplace
+    source:
+      type: github
+      url: anthropics/claude-code
+  - name: superpowers-marketplace
+    kind: marketplace
+    source:
+      type: github
+      url: obra/superpowers-marketplace
 
 plugins:
   - name: superpowers@superpowers-marketplace
