--- a/test/e2e/fixtures/minimal-clewfile.yaml
+++ b/test/e2e/fixtures/minimal-clewfile.yaml
@@ -1,8 +1,10 @@
 version: 1
-marketplaces:
-  superpowers-marketplace:
-    source: github
-    repo: obra/superpowers-marketplace
+sources:
+  - name: superpowers-marketplace
+    kind: marketplace
+    source:
+      type: github
+      url: obra/superpowers-marketplace
 
 plugins:
   - name: superpowers@superpowers-marketplace
