feat: Add local repository plugin support (#65)
- Support source: local format for plugins in ~/.claude/plugins/repos/
- Direct editing of installed_plugins.json instead of CLI installation
- Version detection from plugin.json in local repositories
- Git commit SHA tracking for local plugin installations
- Scope support (user/project) with user as default
- Both simple and nested source format syntax

BREAKING CHANGE: Minor version bump due to new feature addition

Closes #65

--- a/schema/examples/advanced.yaml
+++ b/schema/examples/advanced.yaml
@@ -38,6 +38,15 @@ plugins:
     enabled: false
     scope: project
 
+  # Local repository plugin (not from marketplace)
+  # These are plugins cloned into ~/.claude/plugins/repos/
+  # clew will directly edit installed_plugins.json instead of using claude CLI
+  - name: my-local-plugin
+    source: local
+    path: ~/.claude/plugins/repos/my-local-plugin
+    enabled: true
+    scope: user
+
 mcp_servers:
   # stdio transport with environment variables
   episodic-memory:
