test: Fix e2e tests for marketplaces schema
- Check for 'marketplaces' field in JSON output instead of 'sources'
- Update test fixtures to use new marketplaces map format
- Update validation test to check for missing repo error

--- a/test/e2e/fixtures/complete-clewfile.yaml
+++ b/test/e2e/fixtures/complete-clewfile.yaml
@@ -1,15 +1,9 @@
 version: 1
-sources:
-  - name: claude-code-plugins
-    kind: marketplace
-    source:
-      type: github
-      url: anthropics/claude-code
-  - name: superpowers-marketplace
-    kind: marketplace
-    source:
-      type: github
-      url: obra/superpowers-marketplace
+marketplaces:
+  claude-code-plugins:
+    repo: anthropics/claude-code
+  superpowers-marketplace:
+    repo: obra/superpowers-marketplace
 
 plugins:
   - name: superpowers@superpowers-marketplace
