--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,15 +40,29 @@ jobs:
           TAG_NAME: ${{ github.ref_name }}
         run: |
           {
-            echo "## Changelog"
-            echo ""
-            # Get previous tag to generate incremental changelog
+            # Extract version from tag (e.g., v0.8.0 -> 0.8.0)
+            VERSION="${TAG_NAME#v}"
+
+            # Extract changelog section for this version from CHANGELOG.md
+            if [ -f CHANGELOG.md ]; then
+              echo "## Changelog"
+              echo ""
+              # Extract content between ## [$VERSION] and next ## [
+              awk "/^## \[$VERSION\]/{flag=1; next} /^## \[/{flag=0} flag" CHANGELOG.md
+              echo ""
+            fi
+
+            # Also include git commit list
             PREVIOUS_TAG=$(git describe --tags --abbrev=0 "$TAG_NAME^" 2>/dev/null || echo "")
             if [ -n "$PREVIOUS_TAG" ]; then
+              echo "## Commits"
+              echo ""
               echo "Changes since $PREVIOUS_TAG:"
               echo ""
               git log --oneline "$PREVIOUS_TAG".."$TAG_NAME"
             else
+              echo "## Commits"
+              echo ""
               echo "Initial release"
               echo ""
               git log --oneline "$TAG_NAME"
